src/salesforce/retrieve/metadata/objects/Field__c.object
<CustomObject>
    <fields>
        <fullName>ColumnName__c</fullName>
        <label>ColumnName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieldId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>FieldId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPrimaryKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrimaryKey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdateNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdateNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>int</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>varchar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>